src/tests/unit/error/Cluster.APPLICATION.xcpp
// This is -*- c++ -*- nearly C++23 with Modules TS but in the S.C.O.L.D. stylings that are so popular these days.
// Copyright Yahoo Inc. 2022.
// Licensed under the terms of the Apache-2.0 license.
// For terms, see the LICENSE file at https://github.com/yahoo/tunitas-basics/blob/master/LICENSE
// For terms, see the LICENSE file at https://git.tunitas.technology/all/components/basics/tree/LICENSE
#divert <fpp>
#import tests.unit.error.Cluster.template
namespace tests::unit::error::cluster {
  template<> struct Cluster<APPLICATION>;
}
#endiv
#divert <hpp>
#import tunitas.application.error.Code
#import tunitas.application.error.Condition
#import tunitas.application.error.Category
#import tunitas.application.error.category
namespace tests::unit::error::cluster {
  template<> struct Cluster<APPLICATION> {
    using Code = ::tunitas::application::error::Code;
    using Condition = ::tunitas::application::error::Condition;
    using Category = ::tunitas::application::error::Category;
    inline static auto category() -> Category const & { return ::tunitas::application::error::category(); }
  };
}
#endiv
